[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Brain.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Grave.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Board.gd" type="Script" id=5]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/img/UI.png" type="Texture" id=8]
[ext_resource path="res://assets/img/brain.png" type="Texture" id=9]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_5.png" type="Texture" id=10]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_6.png" type="Texture" id=11]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_3.png" type="Texture" id=12]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_4.png" type="Texture" id=13]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_1.png" type="Texture" id=14]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_2.png" type="Texture" id=15]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_7.png" type="Texture" id=16]
[ext_resource path="res://assets/img/sun_rising_anim/sun_rising_8.png" type="Texture" id=17]
[ext_resource path="res://assets/img/leaf.png" type="Texture" id=18]
[ext_resource path="res://assets/img/key.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Board" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Brain" parent="." instance=ExtResource( 3 )]
position = Vector2( 83, 56 )
z_index = 50

[node name="Grave" parent="." instance=ExtResource( 4 )]
position = Vector2( 149, 122 )
z_index = 50

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 146, 120 )

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="Brain_item" type="Sprite" parent="."]
visible = false
position = Vector2( 238, 139 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
centered = false

[node name="Leaf_item" type="Sprite" parent="."]
visible = false
position = Vector2( 273, 147 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="Key_item" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 147 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 19 )

[node name="Rise" type="AnimatedSprite" parent="."]
position = Vector2( 273, 101 )
frames = SubResource( 1 )

[node name="AfterDead" type="Timer" parent="."]
wait_time = 1.5

[node name="AfterWin" type="Timer" parent="."]
wait_time = 1.5

[node name="CheckActions" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Start" type="Sprite" parent="."]
z_index = 55

[node name="End" type="Sprite" parent="."]
position = Vector2( 1, 34 )
z_index = 55

[connection signal="area_entered" from="Brain" to="Player" method="_on_Brain_area_entered"]
[connection signal="area_entered" from="Grave" to="Player" method="_on_Grave_area_entered"]
[connection signal="action_done" from="Player" to="." method="_on_Player_action_done"]
[connection signal="action_done" from="Player" to="UI" method="_on_Player_action_done"]
[connection signal="level_done" from="Player" to="." method="_on_Player_level_done"]
[connection signal="timeout" from="AfterDead" to="." method="_on_AfterDead_timeout"]
[connection signal="timeout" from="AfterWin" to="." method="_on_AfterWin_timeout"]
[connection signal="timeout" from="CheckActions" to="." method="_on_CheckActions_timeout"]
